--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               maxlength="16"
               pattern="[0-9]*"
               inputmode="numeric"
+              onkeypress="return checkDigit(event)"
             />
             <span class="errorMsg" id="cardNumberError"></span>
           </div>
