--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="form-group">
               <label>CVV</label>
-              <input type="text" name="cvv" id="cvv" maxlength="3"/>
+              <input type="text" name="cvv" id="cvv" maxlength="3" onkeypress="return checkDigit(event)"/>
               <span class="errorMsg" id="cardCvvError"></span>
             </div>
           </div>
